# AVS

./: .clang-format  .gitignore  README.md
AvsLab0/: CMakeLists.txt
AvsLab0/description/: description.txt
AvsLab0/results/: output.txt  output0.txt  output2.txt  output3.txt
AvsLab0/source/: basic_matrix.c  basic_matrix.h  diagonal_matrix.c  diagonal_matrix.cpp  diagonal_matrix.h  in_out_functions.c  in_out_functions.h  input_functions.cpp  input_functions.h  main.c  main.cpp  sort.c  sort.cpp  sort.h  triangular_matrix.c  triangular_matrix.cpp  triangular_matrix.h  usual_matrix.c  usual_matrix.cpp  usual_matrix.h
AvsLab0/tests/: test3.txt  test5.txt  test6.txt  test7.txt
AvsLab1/: CMakeLists.txt
AvsLab1/description/: comparison.txt  description.txt
AvsLab1/results/: output4.txt
AvsLab1/source/: basic_matrix.cpp  basic_matrix.h  diagonal_matrix.cpp  diagonal_matrix.h  error_handler.cpp  error_handler.h  main.cpp  triangular_matrix.cpp  triangular_matrix.h  usual_matrix.cpp  usual_matrix.h
AvsLab1/tests/: test0.txt
AvsLab2/description/: description.docx
AvsLab2/results/: output_10_1.txt  output_10_2.txt  output_11_2.txt  output_1_1.txt  output_2_1.txt  output_3_2.txt  output_4_2.txt  output_5_2.txt  output_7_1.txt  output_8_1.txt  output_8_2.txt  output_9_1.txt  output_9_2.txt
AvsLab2/source/: container.py  diagonal_matrix.py  main.py  matrix.py  triangular_matrix.py  usual_matrix.py
AvsLab2/tests/: test10.txt  test11.txt  test7.txt  test8.txt  test9.txt
AvsLab3/: CMakeLists.txt
AvsLab3/description/: description.docx
AvsLab3/results/: output1.txt
AvsLab3/source/: basic_matrix.c  basic_matrix.h  container.c  container.cpp  container.h  diagonal_matrix.c  diagonal_matrix.h  generator.c  generator.h  in_out_functions.h  main.c  matrix.c  reader.c  reader.h  triangular_matrix.c  triangular_matrix.h  usual_matrix.c  usual_matrix.h
AvsLab3/source/container/: container.c
AvsLab3/tests/: test1.txt  test2.txt  test3.txt  test5.txt  test7.txt
AvsLab4/: CMakeLists.txt
AvsLab4/description/: description.docx
AvsLab4/source/: garden.cpp  garden.h  gardener.cpp  gardener.h  main.cpp  modes.h
